[gd_scene load_steps=52 format=2]

[ext_resource path="res://assets/images/enemys/baby boxer/Baby Boxer-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/Entitys/Enemys/BabyBoxer.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/SFX/explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/SFX/Clank_8.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 128, 48 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 48 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 128, 48 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 128, 48 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 128, 48 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 128, 48 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 128, 48 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1152, 128, 48 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1200, 128, 48 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1248, 128, 48 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1296, 128, 48 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1344, 128, 48 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1392, 128, 48 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1440, 128, 48 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1488, 128, 48 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1536, 128, 48 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1584, 128, 48 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1632, 128, 48 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1632, 128, 48 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1680, 128, 48 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1728, 128, 48 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1776, 128, 48 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1824, 128, 48 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1872, 128, 48 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1920, 128, 48 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 128, 48 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 128, 48 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 128, 48 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 432, 128, 48 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 128, 48 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 528, 128, 48 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 576, 128, 48 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 624, 128, 48 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 672, 128, 48 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 720, 128, 48 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 768, 128, 48 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 816, 128, 48 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 864, 128, 48 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 912, 128, 48 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 960, 128, 48 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1008, 128, 48 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1056, 128, 48 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1104, 128, 48 )

[sub_resource type="SpriteFrames" id=67]
animations = [ {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "sleeping",
"speed": 15.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": false,
"name": "running",
"speed": 15.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": false,
"name": "hit",
"speed": 15.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 24 ), SubResource( 48 ), null ],
"loop": false,
"name": "death",
"speed": 15.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=68]
radius = 113.5

[sub_resource type="CapsuleShape2D" id=69]
radius = 4.57654
height = 51.7545

[sub_resource type="RectangleShape2D" id=70]
extents = Vector2( 5.42951, 5.55293 )

[node name="BabyBoxer" type="KinematicBody2D"]
light_mask = 2
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 30.5856, -4.36937 )
frames = SubResource( 67 )
animation = "running"
frame = 9
playing = true

[node name="Trigger" type="Area2D" parent="."]
visible = false
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 68 )

[node name="AttackShape" type="Area2D" parent="."]
position = Vector2( 40.9132, 0.397217 )
rotation = 1.5708
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackShape"]
shape = SubResource( 69 )

[node name="AttackHitbox" type="Area2D" parent="."]
position = Vector2( 40.9132, 0.397217 )
rotation = 1.5708
monitoring = false
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
shape = SubResource( 69 )

[node name="Delay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DelayMovement" type="Timer" parent="."]
one_shot = true

[node name="Body" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 70 )

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="HitEffect" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -0.250351, 0 )
stream = ExtResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_entered" from="AttackShape" to="." method="_on_Enemy_in_Range"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_HitDetection"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
[connection signal="timeout" from="DelayMovement" to="." method="_on_Delay_timeout"]
